--- a/index.html
+++ b/index.html
@@ -1,29 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Playlist Import</title>
-</head>
-<body>
-    <h1>Import Your Playlist</h1>
-    <div class="import-tabs">
-        <button class="tab" data-tab="spotify-import-panel">Spotify</button>
-        <button class="tab" data-tab="amazon-import-panel">Amazon Music</button>
-    </div>
-    <div class="import-panels">
-        <div id="spotify-import-panel" class="import-panel">
-            <!-- Existing Spotify import panel -->
-        </div>
-        <div id="amazon-import-panel" class="import-panel hidden">
-            <h2>Import Amazon Music Playlist</h2>
-            <input type="file" id="amazon-csv-input" accept="text/csv">
-            <p>Please upload your Amazon Music CSV file.</p>
-            <p class="help-text">Ensure your file is formatted correctly for successful import.</p>
-        </div>
-    </div>
-    <div class="warning">
-        <p>Warning: Ensure that your CSV files are structured correctly. This now includes support for Amazon Music CSVs!</p>
-    </div>
-</body>
-</html>
+<!-- Inside the #import-section .import-tabs block -->
+<button
+    type="button"
+    class="import-tab"
+    data-import-type="amazon"
+    style="
+        background: transparent;
+        border: none;
+        color: var(--foreground);
+        cursor: pointer;
+        padding: 0.25rem 0.5rem;
+        opacity: 0.7;
+    "
+>
+    Amazon Music
+</button>
+
+<!-- After other import panels, add this: -->
+<div id="amazon-import-panel" class="import-panel" style="display: none">
+    <p style="margin-bottom: 0.5rem; font-size: 0.9rem">
+        Import from <b>Amazon Music</b><br>
+        Export your playlist CSV from Amazon Music (“Your Library” > “Export Playlist”) and upload it here.
+    </p>
+    <input
+        type="file"
+        id="amazon-csv-file-input"
+        class="btn-secondary"
+        accept=".csv"
+        style="width: 100%; margin-bottom: 0.5rem"
+    />
+    <p style="font-size: 0.8rem; margin: 0; opacity: 0.7">
+        This feature is new — please report any compatibility issues!
+    </p>
+</div>
